trained model, initial TSNE reduction of 100 samples

--- a/VizFCN.ipynb
+++ b/VizFCN.ipynb
@@ -156,7 +156,7 @@
       "WARNING:tensorflow:From /home/linneamay/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/util/tf_should_use.py:118: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
       "Instructions for updating:\n",
       "Use `tf.global_variables_initializer` instead.\n",
-      "step 0, training accuracy 0.04\n"
+      "step 0, training accuracy 0.08\n"
      ]
     }
    ],
@@ -164,18 +164,21 @@
     "train_step = tf.train.AdamOptimizer(1e-4).minimize(cross_entropy)\n",
     "sess.run(tf.initialize_all_variables())\n",
     "finalRepresentations = []\n",
-    "for i in range(500):\n",
-    "    batch = mnist.train.next_batch(50)\n",
-    "    if(i%100 ==0):\n",
-    "        #print(batch[1].reshape(-1,1).tolist())\n",
-    "        indices = batch[1]\n",
-    "        depth = 10\n",
-    "        y_matrix = tf.one_hot(indices, depth).eval(session=sess)\n",
-    "        train_accuracy = accuracy.eval(session=sess,feed_dict={x:batch[0], y_: y_matrix, keep_prob: 1.0})\n",
-    "        print(\"step %d, training accuracy %g\"%(i, train_accuracy))\n",
-    "        finalRepresentations.append(h_fc2.eval(session=sess, feed_dict={x:mnist.test.images, keep_prob:1.0}))\n",
-    "    train_step.run(session=sess,feed_dict={x: batch[0], y_: batch[1], keep_prob: 0.5})\n",
-    "\n",
+    "with open(\"weights.csv\", w) as file:\n",
+    "    writer = file.writer()\n",
+    "    for i in range(500):\n",
+    "        batch = mnist.train.next_batch(50)\n",
+    "        if(i%100 ==0):\n",
+    "            #print(batch[1].reshape(-1,1).tolist())\n",
+    "            indices = batch[1]\n",
+    "            depth = 10\n",
+    "            y_matrix = tf.one_hot(indices, depth).eval(session=sess)\n",
+    "            train_accuracy = accuracy.eval(session=sess,feed_dict={x:batch[0], y_: y_matrix, keep_prob: 1.0})\n",
+    "            print(\"step %d, training accuracy %g\"%(i, train_accuracy))\n",
+    "            weight= h_fc2.eval(session=sess, feed_dict={x:mnist.test.images, keep_prob:1.0})\n",
+    "            finalRepresentations.append(weight)\n",
+    "            writer.writerow(weight)\n",
+    "        train_step.run(session=sess,feed_dict={x: batch[0], y_: batch[1], keep_prob: 0.5})\n",
     "print(\"test accuracy %g\"%accuracy.eval(session=sess,feed_dict={x: mnist.test.images, y_: mnist.test.labels, keep_prob: 1.0}))"
    ]
   },
