final attempt at alinging, normalized the projections and still not much

--- a/MNIST_numbers/Alignment_Centroid.ipynb
+++ b/MNIST_numbers/Alignment_Centroid.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "(7, 100, 2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,12 +81,15 @@
     "df1['labels'] = labels\n",
     "\n",
     "df2 = pd.DataFrame(weights[1])\n",
-    "df2['labels'] = labels"
+    "df2['labels'] = labels\n",
+    "\n",
+    "df3 = pd.DataFrame(weights[2])\n",
+    "df3['labels'] = labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +156,7 @@
        "4  5.801595  7.121058"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +251,7 @@
     "def plot_with_labels(matrix, labels, filename=\"\"):\n",
     "    x = matrix[:, 0].tolist()\n",
     "    y = matrix[:, 1].tolist()\n",
-    "    labels = mnist.test.labels[:100]\n",
+    "    #labels = mnist.test.labels[:100]\n",
     "    plt.figure(figsize=(5, 5))  #in inches\n",
     "    for i, label in enumerate(labels):\n",
     "            plt.scatter(x, y)\n",
@@ -263,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -288,7 +291,7 @@
        "       [ 4.7030997,  2.9604661]], dtype=float32)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +394,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +426,7 @@
        "[-0.8656185, 4.125817]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +458,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7, 100, 2)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,64 +487,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_matrix = y[1]\n",
-    "target_matrix = y[0]\n",
-    "trans = make_transform(source_matrix, target_matrix)\n",
+    "source_matrix_cent = y[1]\n",
+    "target_matrix_cent = y[0]\n",
+    "trans = make_transform(y[1], y[0])\n",
     "\n",
-    "source_matrix_new = apply_transform(source_matrix, trans)"
+    "tm_1 = apply_transform(weights[1], trans)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 152,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 4.4114423 , -3.6844835 ],\n",
-       "       [-1.2043024 , -2.2502718 ],\n",
-       "       [-6.902654  ,  2.5574813 ],\n",
-       "       [-3.8628511 ,  0.39162537],\n",
-       "       [ 3.8119714 ,  3.5707412 ],\n",
-       "       [ 2.4953952 ,  0.4588765 ],\n",
-       "       [ 5.9144444 , -0.8568028 ],\n",
-       "       [-3.970137  ,  4.393532  ],\n",
-       "       [ 1.9969057 , -0.985729  ],\n",
-       "       [-0.46491846,  2.3946028 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "source_matrix_new"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 2)"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trans.shape"
+    "## Alinging centroids themselves"
    ]
   },
   {
@@ -529,7 +510,116 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Very first epoch, generally want the rest to match this loosely\n",
+    "plot_with_labels(y[0], [i for i in range(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second epoch, should match y[0] loosely\n",
+    "cent_1_trans = apply_transform(y[1], trans)\n",
+    "plot_with_labels(cent_1_trans, [i for i in range(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to align epoch 2 by using the original 1:0 transformation\n",
+    "plot_with_labels(apply_transform(y[2], trans), [i for i in range(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to align epoch 2 by making a new transformation with the aligned epoch 1\n",
+    "trans2 = make_transform(y[2],cent_1_trans)\n",
+    "plot_with_labels(apply_transform(y[2], trans2), [i for i in range(10)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Align the actual projections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_with_labels(weights[0], labels, \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_with_labels(apply_transform(df2.iloc[:, :2].values, trans), labels, \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tm_2 = apply_transform(df3.iloc[:, :2].values, trans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_with_labels(tm_2, df3['labels'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_with_labels(tm_2, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_with_labels(tm_2, labels, \"\")"
+   ]
   }
  ],
  "metadata": {
