final changes to demo

--- a/MNIST_clothes/TNSE_fashion.ipynb
+++ b/MNIST_clothes/TNSE_fashion.ipynb
@@ -254,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -319,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -531,6 +535,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -628,7 +639,64 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "    make_sim_matrix is an [n_samples, n_samples] matrix of parwise similarities. \n",
+    "    X: the [n_samples, n_features] matrix from which to genarate the similarities. \n",
+    "    Method: the method for computing pairwise similarities. Default is cosine. If \"precomputed\", returns X. \n",
+    "\"\"\"\n",
+    "def make_sim_matrix(X, method=\"cosine\"):\n",
+    "    sim_matrix = []\n",
+    "    \n",
+    "    if method == \"cosine\": \n",
+    "        sim_matrix = np.array(cosine_similarity(X))\n",
+    "    elif method == \"precomputed\":\n",
+    "        sim_matrix = np.array(X)\n",
+    "    \n",
+    "    #ensure the diagonal is 1\n",
+    "    for i in range(len(sim_matrix)): \n",
+    "        sim_matrix[i][i] = round(sim_matrix[i][i])\n",
+    "        #sim_matrix[i] = (list(map(lambda x: 1-x, sim_matrix[i])))\n",
+    "        \n",
+    "    return sim_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "    get_nh returns the neighborhood value of a point, ie the % of the k nearest points \n",
+    "\n",
+    "\"\"\"\n",
+    "def get_nh(sim_matrix, feature_matrix, row_index, k=5):\n",
+    "    row = feature_matrix.iloc[row_index, :]\n",
+    "    # Remove any of the diagonal values\n",
+    "    filtered = list(filter(lambda x: x!=1, sim_matrix[row_index]))\n",
+    "    #Get the top k neighbors\n",
+    "    top = np.sort(filtered)[-k:]\n",
+    "    #print(top)\n",
+    "    clusters = []\n",
+    "    for i in range(len(sim_matrix[row_index])): \n",
+    "        if sim_matrix[row_index][i] in top: \n",
+    "            #rint(l2_e1_df.iloc[i, 10])\n",
+    "            clusters.append(feature_matrix.iloc[i, -1])\n",
+    "    #print(clusters)\n",
+    "    # Get the cluster of the original vector\n",
+    "    i_cluster = row[-1]\n",
+    "    #print(row)\n",
+    "    # Get the proprotion of the neighbors that are in the same cluster. \n",
+    "    return len(list(filter(lambda x: x== i_cluster, clusters))) / len(clusters)\n",
+    "\n",
+    "def average_nh(feature_matrix):\n",
+    "    sim_matrix = make_sim_matrix(feature_matrix.iloc[:, :10].values)\n",
+    "    avg = 0\n",
+    "    for i in range(len(feature_matrix)):\n",
+    "        avg += get_nh(sim_matrix, feature_matrix, i)\n",
+    "    return avg / len(feature_matrix)"
+   ]
   }
  ],
  "metadata": {
